# DnsBlackhole

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: macos-ci.yml
scripts/: build-macos-service.sh  release.ps1
src/: api.ts  charts.ts  dom.ts  format.ts  main.ts  style.css  template.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.dev.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/macos/: com.dnsblackhole.app.service.plist
src-tauri/src/: config.rs  database.rs  dns.rs  filters.rs  lib.rs  main.rs  performance.rs  service_core.rs  storage.rs  tray.rs
src-tauri/src/dns/: access.rs  cache.rs  filter_runtime.rs  protocol.rs  rewrites.rs  rule_cache.rs  rules.rs  server.rs  stats.rs  task_pool.rs  upstream.rs  worker.rs
src-tauri/src/privileged_bridge/: client.rs  daemon.rs  mod.rs  rpc_server.rs  service_management.rs  windows_pipe.rs  windows_service.rs  windows_service_management.rs  windows_system_dns.rs
src-tauri/windows/: nsis-hooks.nsh  service-actions.wxs
