[package]
name = "dnsblackhole"
version = "0.1.1"
description = "本地 DNS 黑名单工具"
authors = ["doudou"]
edition = "2024"

[lib]
name = "dnsblackhole_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["blocking"] }
rusqlite = { version = "0.37", features = ["bundled"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-opener = "2"
