[package]
name = "dnsblackhole"
version = "0.1.47"
description = "本地 DNS 黑名单工具"
authors = ["doudou"]
edition = "2024"
default-run = "dnsblackhole"

[lib]
name = "dnsblackhole_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
macos-service = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1.1", default-features = false, features = ["use-std"] }
socket2 = "0.6"
reqwest = { version = "0.13", features = ["blocking"] }
rusqlite = { version = "0.40.1", features = ["backup", "bundled"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = ["NSError", "NSString"] }
objc2-service-management = { version = "0.3.2", features = ["objc2", "objc2-foundation", "SMAppService"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.56"

[[bin]]
name = "dnsblackhole"
path = "src/main.rs"

[[bin]]
name = "dnsblackhole-service"
path = "src/bin/dnsblackhole-service.rs"
required-features = ["macos-service"]
